# labradorite

./: Cargo.toml  LICENSE.md  README.md  config.toml
src/: lib.rs  main.rs
src/core/: mod.rs
src/core/commands/: _cmd.txt  age.rs  info.rs  ping.rs
src/core/events/: interaction.rs  ready.rs
src/utils/: colors.rs  config.rs  logger.rs  mod.rs
